tests/csbad.out
./csbad.svx:2: error: Station "1" fixed before CS command first used
./csbad.svx:3:4: error: Unknown coordinate system
./csbad.svx:4:4: error: Unknown coordinate system
./csbad.svx:5:4: error: Unknown coordinate system
./csbad.svx:6:11: error: End of line not blank
./csbad.svx:7:4: error: Unknown coordinate system
./csbad.svx:8:4: error: Unknown coordinate system
./csbad.svx:9:4: error: Unknown coordinate system
./csbad.svx:10:4: error: Unknown coordinate system
./csbad.svx:11:4: error: Unknown coordinate system
./csbad.svx:12:4: error: Unknown coordinate system
./csbad.svx:13:4: error: Unknown coordinate system
./csbad.svx:14:4: error: Unknown coordinate system
./csbad.svx:15:4: error: Unknown coordinate system
./csbad.svx:16:4: error: Unknown coordinate system
./csbad.svx:17:4: error: Unknown coordinate system
./csbad.svx:18:4: error: Unknown coordinate system
./csbad.svx:19:4: error: Unknown coordinate system
./csbad.svx:20:4: error: Invalid coordinate system: unknown projection id
./csbad.svx:21:4: error: Unknown coordinate system
./csbad.svx:22:4: error: Coordinate system unsuitable for output
./csbad.svx:23:4: error: Coordinate system unsuitable for output
./csbad.svx:24:4: error: Coordinate system unsuitable for output
./csbad.svx:29: error: Failed to convert coordinates: latitude or longitude exceeded limits

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 2 survey stations, joined by 0 legs.
There are 0 loops.
Survey has 2 connected components.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   2 0-nodes.
There were 0 warning(s) and 24 error(s) - no output files produced.
